# audifaz

./: .env.example  .gitignore  Caddyfile  PLAN.md  RUNBOOK.md  designsystem.md  docker-compose.yml  edital_tjce.md  plano.md  plano_audio.md  plano_comercializacao.md  plano_estudos_tjce_f06.md  plano_multiuser.md  retificacao_edital_tjce.md
audio-worker/: Dockerfile  SETUP.md  claude_client.py  db.py  requirements.txt  tts_client.py  worker.py
audio-worker/scripts/: test_edge_tts.py  test_gcp_studio_tts.py  test_pipeline.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth.py  claude_client.py  db.py  fcc_examples.json  main.py  migrate.py  models.py  schemas.py  seed.py
backend/app/routers/: audios.py  auth.py  billing.py  blocos.py  concursos.py  content_reports.py  days.py  errors.py  materials.py  me.py  mocks.py  plano.py  podcast.py  progress.py  redacoes.py  topics.py
backend/app/services/: mercadopago.py  openai_validator.py  plan_importer.py
backend/scripts/: import_banca_pdf.py  provision_tjce.py
docs/: lexlumina_design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AudioStatus.jsx  Layout.jsx
frontend/src/contexts/: AuthContext.jsx  BrandContext.jsx  ConcursoContext.jsx  ThemeProvider.jsx
frontend/src/pages/: Billing.jsx  Config.jsx  Errors.jsx  Landing.jsx  Login.jsx  Metricas.jsx  Mocks.jsx  Plano.jsx  Privacidade.jsx  Progress.jsx  Redacao.jsx  Signup.jsx  Termos.jsx  Today.jsx
frontend/src/themes/: index.js
